--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,7 +19,8 @@
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
-    "expo-document-picker": "~8.4.1"
+    "expo-document-picker": "~8.4.1",
+    "expo-av": "~8.7.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
