--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -8,19 +8,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
-    "expo-updates": "~0.4.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-av": "^8.7.0",
+    "expo-document-picker": "~8.4.1",
     "expo-splash-screen": "~0.8.0",
+    "expo-updates": "~0.4.0",
+    "native-base": "^2.15.2",
+    "npx": "^10.2.2",
+    "pod-install": "^0.1.18",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12",
-    "expo-document-picker": "~8.4.1",
-    "expo-av": "~8.7.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
