--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-watson": "^1.6.2",
     "react-native-web": "~0.13.12",
